@@ -1,0 +1,5 @@
+int
+mono_test_many_int_arguments (int a, int b, int c, int d, int e, int f, int g, int h, int i, int j)
+{
+	return a + b + c + d + e + f + g + h + i + j;
+}
